Make gradlew executable

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -13,5 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Make gradlew executable
+          run: chmod +x ./gradlew
+
       - name: Build
         run: ./gradlew build
