--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 android:resource="@xml/note_list_info" />
         </receiver>
 
+        <service android:name=".view.NotesService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
         <activity
             android:name=".view.MainActivity"
             android:theme="@style/TouchThemeNoActionBar"
