--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         def nav_version = "2.3.3"
+        def hilt_Version = "2.31.2-alpha"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_Version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
