Complete test for note database operations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,7 +118,7 @@ dependencies {
 
     // androidx core testing dep
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
 
 kapt {
