--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -105,7 +111,6 @@ dependencies {
 
     // Test dependencies
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // Coroutines test dep
@@ -118,7 +123,12 @@ dependencies {
 
     // androidx core testing dep
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.test:core:1.3.0'
+
+    // Robolectric
+    testImplementation 'org.robolectric:robolectric:4.4'
 }
 
 kapt {
