--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,9 @@ dependencies {
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.4'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
 
 kapt {
