--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -12,6 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: set up JDK 1.8
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.8
         
       - name: Make gradlew executable
         run: chmod +x ./gradlew
