--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -13,8 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: set up JDK 1.8
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.8
+
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
       - name: Run Unit tests
-        run: ./gradlew test --stacktrace
+        run: ./gradlew testDebugUnitTest
