Update android_testing.yml to show test report

--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -18,3 +18,7 @@ jobs:
 
       - name: Run Unit tests
         run: ./gradlew testDebugUnitTest
+
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }}
