--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - '*'
-      - !main
-      - !production
+      - '!main'
+      - '!production'
 
 jobs:
   test:
