--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -2,7 +2,9 @@ name: Gradle Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
+      - 'production'
   pull_request:
     branches: [ main ]
 
