use externalDirs instead of filesDir

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filePaths"/>
+                android:resource="@xml/file_paths"/>
 
         </provider>
         
